<resources>
    <string name="app_name">QuizApp</string>
    <string name="main_menu_button_quizuj">Play Quiz!</string>
    <string name="main_menu_button_zestawy">Quiz Manager</string>
    <string name="main_menu_button_ustawienia">Settings</string>
    <string name="questions_sets_list_menu_import">Import set</string>
    <string name="questions_sets_list_menu_create">Create set</string>
    <string name="name_hint">Enter quiz name</string>
    <string name="add_questions_set_photo">Add image</string>
    <string name="create_questions_sets_add_question">Add question</string>
    <string name="create_question_activity_name_hint">Name</string>
    <string name="create_question_activity_question_content_hint">Enter question content</string>
    <string name="create_question_activity_add_answer_hint">Add answers</string>
    <string name="create_question_activity_save_question">Save</string>
    <string name="create_question_activity_add_answer_content_hint">Answer</string>
    <string name="create_questions_sets_save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_answers_button">Check</string>
    <string name="import_questions_set_fab_label">Import questions set</string>
    <string name="create_questions_set_fab_label">Create questions set</string>
    <string name="questions_sets_list_label">Questions sets</string>
    <string name="player_activity_label">Let\'s play!</string>
    <string name="editor_label">Questions set editor</string>
    <string name="question_editor_label">Question editor</string>
</resources>
