<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".QuestionEditorActivity">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/question_editor_question_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_question_activity_question_content_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="createEmptyAnswer"
            android:text="@string/create_question_activity_add_answer_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/answerws_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveQuestion"
            android:text="@string/create_question_activity_save_question" />
    </LinearLayout>
