<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_questions_sets_qs_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="vertical">

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openCreateQuestionActivity"
            android:text="@string/create_questions_sets_add_question" />

        <fragment
            android:id="@+id/create_questions_sets_question_list_fragment"
            android:name="com.example.quizapp.QuestionsListFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <Button
            android:id="@+id/button8"
            android:onClick="saveQuestionsSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/create_questions_sets_save" />

    </LinearLayout>

</LinearLayout>
